fixed image blocking spacing

--- a/import/prompter/style.css
+++ b/import/prompter/style.css
@@ -65,13 +65,14 @@ prompt screen {
   width: 100%;
   height: 100%;
 
+  font-family: FreeMono, Courier, monospace;
   font-family: monospace;
   white-space: pre;
-  
-  /* 8.4px width x 16px height */
+
+  /* 8px width x 16px height */
   font-size: 16px;
   line-height: 16px;
-  letter-spacing: -0.4px;
+  letter-spacing: -0.8px;
 
   text-indent: 0;
   text-overflow: clip;
